misc tweak and boss defeat info formatting

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -5366,7 +5366,7 @@ Drew之翼:
   - §#DC143C剑刃掷出后会进行一次造成额外伤害的剪击
   - §#FFA403右键用剑刃向前方剪出
   - §#FFA403剑刃击中敌人时会进行招架，并使你获得近战无敌帧
-  - §#FFA403你也可以用剑刃格挡弹幕，并短暂使其伤害造成的伤害减少350点
+  - §#FFA403你也可以用剑刃格挡弹幕，并短暂使其造成的伤害减少350点
   - §#FFA403格挡后会获得16层充能，充能会强化普通攻击，让你可以同时使用两把剑刃
   - §r一对注入了泰拉大陆精华的天赐之刃，其威力足以切割现实的结构
   attributes:
@@ -5526,7 +5526,7 @@ Drew之翼:
   - §#DC143C剑刃掷出后会进行一次造成额外伤害的剪击
   - §#FFA403右键用剑刃向前方剪出
   - §#FFA403剑刃击中敌人时会进行招架，并使你获得近战无敌帧
-  - §#FFA403你也可以用剑刃格挡弹幕，并短暂使其伤害造成的伤害减少400点
+  - §#FFA403你也可以用剑刃格挡弹幕，使其伤害减少400点
   - §#FFA403格挡后会获得16层充能，充能会强化普通攻击，让你可以同时使用两把剑刃
   - §r“你的旅程的物理顶点，拥有着能使神明§m笑嘻§r分崩离析的力量”
   attributes:
@@ -8530,8 +8530,9 @@ Dodu的手炮:
   item: DIAMOND_SWORD
   lore:
   - §r召唤出一个阴影云
+  - §r“命中率堪忧”
   attributes:
-    damage: 42
+    damage: 100
     damageType: Magic
     projectileSpeed: 6
     crit: 4
