--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -691,6 +691,22 @@
     buffImmute:
         - "中毒"
         - "幻星感染"
+亵渎守卫:
+    buffInflict:
+        - "神圣之火|70|1"
+    buffImmute:
+        - "神圣之火"
+        - "夜魇"
+        - "燃烧"
+        - "狱炎"
+亵渎岩:
+    buffInflict:
+        - "神圣之火|40|1"
+    buffImmute:
+        - "神圣之火"
+        - "夜魇"
+        - "燃烧"
+        - "狱炎"
 冰球:
     buffInflict:
         - "冰冻|20|1"
