profaned guardian sprites

--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
@@ -230,6 +230,10 @@ skins.229=229
 skins.230=230
 skins.231=231
 skins.232=232
+skins.233=233
+skins.234=234
+skins.235=235
+skins.236=236
 
 name.1=regex:\u53f2\u83b1\u59c6\u00a72|\u53f2\u83b1\u59c6\u738b|\u53f2\u83b1\u59c6\u5750\u9a91
 name.2=\u5ca9\u6d46\u53f2\u83b1\u59c6
@@ -463,3 +467,7 @@ name.229=\u6e90\u751f\u5bd2\u6676
 name.230=\u5149\u9634\u6d41\u65f6\u4f1e
 name.231=\u72ec\u89d2\u517d\u5750\u9a91
 name.232=\u661f\u6d41\u98de\u6905
+name.233=\u4eb5\u6e0e\u5b88\u536b\u00b7\u7edf\u5fa1
+name.234=\u4eb5\u6e0e\u5b88\u536b\u00b7\u795e\u77f3
+name.235=\u4eb5\u6e0e\u5b88\u536b\u00b7\u5723\u6676
+name.236=\u4eb5\u6e0e\u5ca9
