--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
@@ -4631,7 +4631,7 @@ TINKER_WORKBENCH:
     - 翱翔徽章
     - 飞翔之魂:10
     - 闪耀金羽:5
-    - 毁灭之灵:5
+    - 夜明锭:5
     recipeCategory: ACCESSORY
   '28':
     requireLevel: 1
