--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -1,16 +1,10 @@
 worldGen:
-    # 世界种子，严禁在世界已经生成过之后更改，会出现地形和生物群系紊乱！
-    seed: 1145141919810
-    # 区块生成时在控制台提示生成洞穴信息所需时长等详细信息，以便于微调下方的参数
-    caveGenDurationLog: false
-    # 洞穴生成时的估算大小；值越小则越准确，但世界生成也相应可能减缓
-    caveSketchSize: 3
-    # 洞穴生成估算时使用的线程数量；建议不要超过CPU线程数并视情况调整
-    caveSketchThreads: 4
-    # 洞穴生成估算时使用的线程数量；强烈建议打开chunkGenDurationLog后寻找较优解
-    caveDetailThreads: 16
-    # 建筑结构生成时每刻处理时长（防止建筑生成时服务器停止响应），单位：纳秒
-    structureNanoSecond: 10000000
+  seed: 1145141919810
+  caveGenDurationLog: false
+  caveSketchSize: 3
+  caveSketchThreads: 4
+  caveDetailThreads: 16
+  structureNanoSecond: 10000000
 rarity:
   '-2': §#AAAAAA§l
   '-1': §#6B6B6B§l
@@ -36,6 +30,70 @@ rarity:
   '19': §#971617§l
   '1000': §l
   '1100': §#C94622§l
+titleMessages:
+- 我的世界：回忆《忘却的旋律》
+- 我的世界：试试《泰拉瑞亚》！
+- 我的世界：怀念我的金坷垃
+- 我的世界：世界有三个维度，不适合⑨岁玩家游玩
+- 泰拉瑞亚：试试《我的世界》！
+- 泰拉瑞亚：也试试饥荒吧！
+- 泰拉瑞亚：试试《旷野之息》！
+- 泰拉瑞亚：试试《星露谷》！
+- 泰拉瑞亚：试试《地心护核者》！
+- 泰拉瑞亚：试试《太空边缘》！
+- 泰拉瑞亚：建议观看《边缘行者》！
+- 泰拉瑞亚：来试试《死亡细胞》！
+- 泰拉瑞亚：试试《地牢守护者2》！
+- 泰拉瑞亚：逝逝《守望先锋》？
+- 泰拉瑞亚：被沙子制服了
+- 泰拉瑞亚第3部分：向导归来
+- 泰拉瑞亚：泰拉瑞亚：泰拉瑞亚：
+- 泰拉瑞亚：按alt-f4
+- 泰拉瑞亚：美味又易燃
+- 泰拉瑞亚：内含小块块，不适合5岁以下的儿童
+- 泰拉瑞亚：现已加入音效
+- 泰拉瑞亚：兄弟你疯了吧？
+- 泰拉瑞亚：重挖好吗？
+- 泰拉瑞亚：强迫症现象模仿者
+- 泰拉瑞亚：劳工挖啊挖！
+- 泰拉瑞亚：神土
+- 泰拉瑞亚：向导死亡的谣言被严重夸大了
+- 泰拉瑞亚：为什么丢向导玩偶会死别的npc
+- 泰拉瑞亚：强迫症现象模仿者
+- 泰拉瑞亚：Cenx邪教
+- 泰拉瑞亚：Maxx传奇
+- 泰拉瑞亚：查询Red精神状态
+- 泰拉瑞亚：克苏鲁疯了……还失去了一只眼睛！
+- 泰拉瑞亚：生存时长两年半！！
+- 泰拉瑞亚：奥克瑞姆重回江湖！！
+- 泰拉瑞亚：远超生命
+- 泰拉瑞亚：除数为零
+- 泰拉瑞亚：我同情这些工具……
+- 泰拉瑞亚：Red开发救赎
+- 泰拉瑞亚：有矿自有天相
+- 泰拉瑞亚：大地边境
+- 泰拉瑞亚：很有精神！
+- 泰拉瑞亚：哇真的是你呀
+- 泰拉瑞亚：我不知道--啊啊啊~哎呦~！
+- 泰拉瑞亚：哎呦你干嘛~~
+- 泰拉瑞亚：现在有更多小黑子！？
+- 泰拉瑞亚：原来你也是OP
+- 泰拉瑞亚：我明白了，原来你们各个都身怀撅寄啊！！
+- 泰拉瑞亚：ln（0）= 0 / 0
+- 泰拉瑞亚：旅途的终点，不，是旅途的中点！！！
+- 泰拉瑞亚：兔兔传说
+- 泰拉瑞亚：这绝对是最后一次更新
+- 泰拉瑞亚：欢迎来到泰拉瑞亚！
+- 泰拉瑞亚：别对一个东西期望太高，这样你就会有惊喜
+- 泰拉瑞亚：1帧能玩，2帧流畅，3帧电竞
+- 泰拉瑞亚：暴风雪绝迹
+- 泰拉瑞亚：你知道我要说什么
+- 泰拉瑞亚：新手围观老手似
+- 泰拉瑞亚：花朵艳丽，终将消散
+- 泰拉瑞亚：灾厄：为什么一个怕被虫子吞了的飞蛾比虫子强？
+- 泰拉瑞亚：灾厄：欢迎来到灾厄！
+- 泰拉瑞亚：灾厄：查询山猪喝醉没
+- 泰拉瑞亚：灾厄：谁还能玩就削谁
 deathMessages:
   Generic:
   - <victim> 的肠子被扯出来了
