bugfix, tweak and new dragoncore version

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/hud_health_star_overlay.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/hud_health_star_overlay.yml
@@ -8,186 +8,187 @@ Functions:
   preRender: |-
     界面变量.playerHealth = 方法.玩家是否飞行() ? 0 : 方法.玩家血量();
 
+
 # star
 star1_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 0, 0), 1))"
   y: "18 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 0, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 0, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 0, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 0, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 0, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star2_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 1, 0), 1))"
   y: "26 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 1, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 1, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 1, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 1, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 1, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star3_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 2, 0), 1))"
   y: "34 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 2, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 2, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 2, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 2, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 2, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star4_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 3, 0), 1))"
   y: "42 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 3, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 3, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 3, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 3, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 3, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star5_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 4, 0), 1))"
   y: "50 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 4, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 4, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 4, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 4, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 4, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star6_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 5, 0), 1))"
   y: "58 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 5, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 5, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 5, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 5, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 5, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star7_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 6, 0), 1))"
   y: "66 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 6, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 6, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 6, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 6, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 6, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star8_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 7, 0), 1))"
   y: "74 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 7, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 7, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 7, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 7, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 7, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star9_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 8, 0), 1))"
   y: "82 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 8, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 8, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 8, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 8, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 8, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star10_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 9, 0), 1))"
   y: "90 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 9, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 9, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 9, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 9, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 9, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star11_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 10, 0), 1))"
   y: "98 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 10, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 10, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 10, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 10, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 10, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star12_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 11, 0), 1))"
   y: "106 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 11, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 11, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 11, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 11, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 11, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star13_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 12, 0), 1))"
   y: "114 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 12, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 12, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 12, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 12, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 12, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star14_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 13, 0), 1))"
   y: "122 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 13, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 13, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 13, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 13, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 13, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star15_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 14, 0), 1))"
   y: "130 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 14, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 14, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 14, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 14, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 14, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star16_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 15, 0), 1))"
   y: "138 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 15, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 15, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 15, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 15, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 15, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star17_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 16, 0), 1))"
   y: "146 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 16, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 16, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 16, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 16, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 16, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star18_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 17, 0), 1))"
   y: "154 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 17, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 17, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 17, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 17, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 17, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star19_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 18, 0), 1))"
   y: "162 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 18, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 18, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 18, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 18, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 18, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star20_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 19, 0), 1))"
   y: "170 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 19, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 19, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 19, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 19, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 19, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star21_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 20, 0), 1))"
   y: "178 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 20, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 20, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 20, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 20, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 20, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star22_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 21, 0), 1))"
   y: "186 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 21, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 21, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 21, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 21, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 21, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star23_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 22, 0), 1))"
   y: "194 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 22, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 22, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 22, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 22, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 22, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star24_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 23, 0), 1))"
   y: "202 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 23, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 23, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 23, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 23, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 23, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star25_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 24, 0), 1))"
   y: "210 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 24, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 24, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 24, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 24, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 24, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star26_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 25, 0), 1))"
   y: "218 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 25, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 25, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 25, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 25, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 25, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star27_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 26, 0), 1))"
   y: "226 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 26, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 26, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 26, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 26, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 26, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star28_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 27, 0), 1))"
   y: "234 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 27, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 27, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 27, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 27, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 27, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star29_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 28, 0), 1))"
   y: "242 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 28, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 28, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 28, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 28, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 28, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 star30_texture:
   x: "((方法.取屏幕宽度) - 9) - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 29, 0), 1))"
   y: "250 - (6 * 方法.min(方法.max((方法.玩家等级() / 20) - 29, 0), 1))"
-  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 29, 0), 1))"
-  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 29, 0), 1))"
+  width: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 29, 0), 1)"
+  height: "12 * 方法.min(方法.max((方法.玩家等级() / 20) - 29, 0), 1)"
   texture: "(方法.到整数(方法.取变量('terraria_mana_tier')) < 11) ? 'hud/star1.png' : (方法.合并文本('hud/star', 方法.到整数(方法.取变量('terraria_mana_tier') - 9), '.png'))"
 # health
 heart1_texture:
