--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
@@ -1870,6 +1870,15 @@ TNT:
     blockHitAction: stick
     buffInflict:
         - "燃烧|200|1"
+寒霜波:
+    penetration: 999999
+    liveTime: 75
+    projectileSize: 4
+    noGravityTicks: 0
+    blockHitAction: thru
+    buffInflict:
+        - "冷冻|150|1"
+        - "冰冻|100|0.1654"
 手里剑:
     penetration: 3
     slowedByWater: true
