--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -98,6 +98,7 @@ titleMessages:
 - 泰拉瑞亚：你知道我要说什么
 - 泰拉瑞亚：新手围观老手似
 - 泰拉瑞亚：花朵艳丽，终将消散
+- 泰拉瑞亚：1997年，我学会了开矿车
 - 泰拉瑞亚：灾厄：为什么一个怕被虫子吞了的飞蛾比虫子强？
 - 泰拉瑞亚：灾厄：欢迎来到灾厄！
 - 泰拉瑞亚：灾厄：查询山猪喝醉没
